# AgentPDFX

./: .gitignore  README.md  pyproject.toml
src/agentpdfx/: agent.py  config.py  knowledge_base.py  main.py  mistral.py
src/agentpdfx/utils/: vector_db.py
